--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 </head>
 <body>
 <header>
+  <h1><img src="images/dinos-r-us.svg" alt="Dinos 'R' Us "></h1>
+</header>
+
+
+<main>
+
+ <h2>Hardrosaur</h2>
+ <figure>
+   <img src="images/hadrosaur.jpg" alt="">
+   <figcaption>Hadrosaurida are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had similar body layout. </figcaption>
+ </figure>
+
+</main>
 
 
 </body>
