--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
  <figure>
    <img src="images/hadrosaur.jpg" alt="">
-   <figcaption>Hadrosaurida are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had similar body layout. </figcaption>
+   <figcaption class="intro">Hadrosaurida are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had similar body layout. </figcaption>
  </figure>
 
  <h2 id="iguanodon">Iguanodon</h2>
