change the text

--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
   </nav>
 </header>
 
-
 <main>
 
  <h2 id="hadrosaur">Hardrosaur</h2>
 
  <figure>
    <img src="images/hadrosaur.jpg" alt="">
-   <figcaption class="intro">Hadrosaurida are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had similar body layout. </figcaption>
+   <figcaption class="intro">Hadrosaurida are descendants of the Upper Jurassic/Lower Cretaceous. </figcaption>
  </figure>
 
  <h2 id="iguanodon">Iguanodon</h2>
