--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <title>Dinosaur designs</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 <link href="css/main.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet"
 </head>
 <body>
 <header>
-  <h1><img src="images/dinos-r-us.svg" alt="Dinos 'R' Us "></h1>
+  <h1><img src="images/dinos-r-us.svg" alt="Dinos 'R' Us"></h1>
   <nav>
     <ol>
       <li><a href="#hadrosaur">Hadrosaur</a></li>
@@ -24,7 +25,7 @@
 
  <figure>
    <img src="images/hadrosaur.jpg" alt="">
-   <figcaption class="intro">Hadrosaurida are descendants of the Upper Jurassic/Lower Cretaceous. </figcaption>
+   <figcaption class="intro">Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous. </figcaption>
  </figure>
 
  <h2 id="iguanodon">Iguanodon</h2>
