--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <title>Dinosaur designs</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 <link href="css/main.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
 </head>
 <body>
 <header>
-  <h1><img src="images/dinos-r-us.svg" alt="Dinos 'R' Us"></h1>
+  <h1><img src="images/dinos-r-us.svg" alt="Dinos ’R’ Us"></h1>
   <nav>
     <ol>
       <li><a href="#hadrosaur">Hadrosaur</a></li>
@@ -25,13 +25,13 @@
 
  <figure>
    <img src="images/hadrosaur.jpg" alt="">
-   <figcaption class="intro">Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous. </figcaption>
+   <figcaption class="intro"> Hadrosaurids are descendants of the Upper Jurassic/Lower Cretaceous iguanodontian dinosaurs and had a similar body layout. </figcaption>
  </figure>
 
  <h2 id="iguanodon">Iguanodon</h2>
 
  <figure>
-   <img src="images/Iguanodon.jpg" alt="">
+   <img src="images/iguanodon.jpg" alt="">
    <figcaption> Iguanodon is a genus of ornithopod dinosaur that existed roughly halfway between the first of the swift bipedal hypsilophodontids of the mid-Jurassic and the duck-billed dinosaurs of the late Cretaceous. </figcaption>
  </figure>
 
